# learning-opengl

./: CMakeLists.txt
include/: glad.c  glad.h
src/: main.cpp
